--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,31 +1,10 @@
-<!doctype html> <%#itemsのshow %>
-<html lang="ja">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<%#itemsのshow %>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <div class="container" >
-      <img src="..." class="img-fluid" alt="Responsive image">
-            <h1 class="p-3 mb-2 bg-dark text-white"><%= @item.name %></h1>
-            <p class="float-right">在庫：<%= @item.status %></p>
-            <p class="text-center"><%= @item.text %></p>
-            <%= link_to "戻る", items_path %>
-        </div>
+<div class="container" >
+    <img src="..." class="img-fluid" alt="Responsive image">
+       <h1 class="p-3 mb-2 bg-dark text-white"><%= @item.name %></h1>
+          <p class="float-right">在庫：<%= @item.status_i18n %></p>
+          <p class="text-center"><%= @item.text %></p>
+          <%= link_to "戻る", items_path %>
+</div>
         
-      
-    
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-  </body>
-</html>
