--- a/app/views/provider/items/index.html.erb
+++ b/app/views/provider/items/index.html.erb
@@ -2,17 +2,13 @@
 
     <div class="container">
       <div class="alert alert-info" role="alert"><h1>登録したカップホルダー一覧</h1></div>
-      <%# @items.each do |items| %>
+      <% @items.each do |item| %>
       <div class="media">
-        <svg class="bd-placeholder-img align-self-center mr-3" width="64" height="64" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 64x64"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">64x64</text></svg>
+        <svg class="bd-placeholder-img align-self-center mr-3" width="150" height="150" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 150x150"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">64x64</text></svg>
           <div class="media-body">
-            <%#link_to items.name, items_path(items) %>
-            <h5 class="mt-0">name</h5>
-            <%#@items.text %>
-            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-            <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+            <h5 class="mt-0"><%= link_to item.name, provider_item_path(item) %></h5>
+            <p class="mb-0"><%= item.text %></p>
           </div>
       </div>
-      <%#"戻る", items_path %>
     </div>
-    <%#end %>
+    <% end %>
