name検索機能追加、view/item/index修正

--- a/app/views/provider/items/edit.html.erb
+++ b/app/views/provider/items/edit.html.erb
@@ -24,7 +24,7 @@
         <%= f.text_field :text %>
     </div>
     <div>
-        <%= f.submit "送信" %>
+        <%= f.submit "更新" %>
     </div>
     
 <% end %>
