--- a/app/views/provider/items/index.html.erb
+++ b/app/views/provider/items/index.html.erb
@@ -11,4 +11,5 @@
           </div>
       </div>
     </div>
-    <% end %>
+      <% end %>
+    <%= link_to "編集", provider_items_edit_path(item) %>
