--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,5 +1,4 @@
-
-  <header>
+ <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">モアカプホ</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,8 +22,12 @@
   </header>
   <body>
     <div class="main-container">
-    
+    <%= search_form_for @q do |f| %>
+      <%= f.label :name, "ワード検索" %>
+      <%= f.search_field :name_cont %>
       
+      <%= f.submit "検索" %>
+    <% end %>
     </div>
 
  
