--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -18,7 +18,7 @@
           <div class="media pt-3">
           <svg class="bd-placeholder-img align-self-start mr-3" width="150" height="150" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 64x64"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">150×150</text></svg>
             <div class="media-body">
-              <h5 class="text-info"><%= link_to item.name, item_path(item) %></h5>
+              <h5 class="text-info"><%= link_to item.name, item_path(item) %>(<%= item.show_count %>)</h5>
               <p><%= item.text %></p>
             </div>
           </div>
